[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = {version = "0.94.4", features = ["clang-runtime"]}
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.40"
anyhow = "1.0.97"
shellexpand = "3.1.0"
